--- a/example/index.html
+++ b/example/index.html
@@ -26,12 +26,11 @@ SHIFT + Arrow keys: move selected quad/corner point by 10 pixels
 's':                Halt current drag operation without releasing mouse
 'c':                Toggle mouse cursor crosshairs
 	</pre>
-	<iframe src="//player.vimeo.com/video/108531008" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen id="test"></iframe>
+	<iframe src="//player.vimeo.com/video/108531008" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen id="video-test"></iframe>
 
 	<script src="../build/maptastic.min.js"></script>
 	<script>
-		var mapper = new Maptastic("controls", "test");
-		mapper.loadLayout();
+		Maptastic("controls", "video-test");
 	</script>
 </body>
 
