switched layer order

--- a/example/index.html
+++ b/example/index.html
@@ -30,7 +30,7 @@ SHIFT + Arrow keys: move selected quad/corner point by 10 pixels
 
 	<script src="../build/maptastic.min.js"></script>
 	<script>
-		Maptastic("controls", "video-test");
+		Maptastic("video-test", "controls");
 	</script>
 </body>
 
