Added screen bounds, layer rotation, and layer flipping

--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@ body{
 </head>
 
 <body>
-	<pre id="controls" style="width:600pxs; height:175px; background:#404040">
+	<pre id="controls" style="width:600px; height:250px; background:#404040">
 SHIFT-Space: Toggle edit mode
 
 In Edit Mode
@@ -25,6 +25,10 @@ Arrow keys:         move selected quad/corner point
 SHIFT + Arrow keys: move selected quad/corner point by 10 pixels
 's':                Halt current drag operation without releasing mouse
 'c':                Toggle mouse cursor crosshairs
+'r':                Rotate selected layer 90 degrees clock-wise
+'h':                Flip selected layer horizontally
+'v':                Flip selected layer vertically
+'b':                Show/Hide projector bounds
 	</pre>
 	<iframe src="//player.vimeo.com/video/108531008" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen id="video-test"></iframe>
 
