--- a/example/index.html
+++ b/example/index.html
@@ -21,8 +21,10 @@ In Edit Mode
 
 click / drag:       select and move quads/corner points
 SHIFT + drag:       move selcted quad/corner point with 10x precision
+ALT + drag:         rotate/scale selected quad
 Arrow keys:         move selected quad/corner point
 SHIFT + Arrow keys: move selected quad/corner point by 10 pixels
+ALT + Arrow keys:   rotate/scale selected quad
 's':                Halt current drag operation without releasing mouse
 'c':                Toggle mouse cursor crosshairs
 'r':                Rotate selected layer 90 degrees clock-wise
