--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@ ALT + drag:         rotate/scale selected quad
 Arrow keys:         move selected quad/corner point
 SHIFT + Arrow keys: move selected quad/corner point by 10 pixels
 ALT + Arrow keys:   rotate/scale selected quad
-'s':                Halt current drag operation without releasing mouse
+'s':                Solo/unsolo selected quad
 'c':                Toggle mouse cursor crosshairs
 'r':                Rotate selected layer 90 degrees clock-wise
 'h':                Flip selected layer horizontally
