Changed build -> dist in examples
Signed-off-by: Austin C.E <austin.cawley@gmail.com>

--- a/example/index.html
+++ b/example/index.html
@@ -34,7 +34,7 @@ ALT + Arrow keys:   rotate/scale selected quad
 	</pre>
 	<iframe src="//player.vimeo.com/video/108531008" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen id="video-test"></iframe>
 
-	<script src="../build/maptastic.min.js"></script>
+	<script src="../dist/maptastic.min.js"></script>
 	<script>
 		Maptastic("video-test", "controls");
 	</script>
