--- a/example/simple.html
+++ b/example/simple.html
@@ -12,7 +12,7 @@
 
 		<div id="so-simple">This is pretty simple.</div>
 
-		<script src="../build/maptastic.min.js"></script>
+		<script src="../dist/maptastic.min.js"></script>
 		<script>
 			Maptastic("so-simple");
 		</script>
