--- a/example/three.html
+++ b/example/three.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 
-		<script src="../build/maptastic.js"></script>
+		<script src="../dist/maptastic.js"></script>
 		<script src="three.min.r69.js"></script>
 		<script>
 			
