--- a/example/three.html
+++ b/example/three.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<script src="../dist/maptastic.js"></script>
-		<script src="three.min.r69.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r69/three.js"></script>
 		<script>
 			
 			var scene;
